--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@typescript-eslint/eslint-plugin": "^8.53.1",
     "@typescript-eslint/parser": "^8.53.1",
     "@vitejs/plugin-react": "^5.1.1",
+    "daisyui": "^5.5.14",
     "eslint": "^9.39.2",
     "eslint-import-resolver-vite": "^2.1.0",
     "eslint-plugin-html": "^8.1.4",
