--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@auth0/auth0-react": "^2.12.0",
     "@tanstack/react-query": "^5.90.19",
     "react": "^19.2.0",
     "react-dom": "^19.2.0"
