--- a/package.json
+++ b/package.json
@@ -11,11 +11,14 @@
   },
   "dependencies": {
     "@auth0/auth0-react": "^2.12.0",
+    "@hookform/resolvers": "^5.2.2",
     "@tanstack/react-query": "^5.90.19",
     "lucide-react": "^0.575.0",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
-    "react-router-dom": "^7.13.0"
+    "react-hook-form": "^7.71.2",
+    "react-router-dom": "^7.13.0",
+    "yup": "^1.7.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.39.1",
