--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@auth0/auth0-react": "^2.12.0",
     "@hookform/resolvers": "^5.2.2",
     "@tanstack/react-query": "^5.90.19",
+    "axios": "^1.13.5",
     "lucide-react": "^0.575.0",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
